Rorato/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Average_Skills_Grade__c</fullName>
        <description>Calculate Average Skills Grade</description>
        <formula>Summary_Skills_Grade__c / Number_Of_Skills__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Skills Grade</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Graphic Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description: text area mandatory field</description>
        <label>Description</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>International_Languages_Speaker__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(new field, checkbox). This field will be hidden on the employee page layout.</description>
        <label>International Languages Speaker</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mailing_City__c</fullName>
        <label>Mailing City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Country__c</fullName>
        <label>Mailing Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_StateProvince__c</fullName>
        <label>Mailing State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Street__c</fullName>
        <label>Mailing Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mailing_Zip_Postal_Code__c</fullName>
        <label>Mailing Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mother_Language__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Mother Language</label>
        <referenceTo>Mother_Language__c</referenceTo>
        <relationshipLabel>Employee</relationshipLabel>
        <relationshipName>Employee</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_Of_Skills__c</fullName>
        <label>Number Of Skills</label>
        <summaryForeignKey>Employee_Skills__c.Employee__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_State_Province__c</fullName>
        <label>Shipping State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipping_Zip_Postal_Code__c</fullName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_Skills_Grade__c</fullName>
        <label>Summary Skills Grade</label>
        <summarizedField>Employee_Skills__c.Grade__c</summarizedField>
        <summaryForeignKey>Employee_Skills__c.Employee__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Employee_List</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Department__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Number_Of_Skills__c</columns>
        <filterScope>Everything</filterScope>
        <label>Employee List</label>
    </listViews>
    <listViews>
        <fullName>GDQueue_Employee</fullName>
        <filterScope>Queue</filterScope>
        <label>GDQueue</label>
        <queue>GDQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>HRQueue_Employee</fullName>
        <filterScope>Queue</filterScope>
        <label>HRQueue</label>
        <queue>HRQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ITQueue_Employee</fullName>
        <filterScope>Queue</filterScope>
        <label>ITQueue</label>
        <queue>ITQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ManagmentQueue_Employee</fullName>
        <filterScope>Queue</filterScope>
        <label>ManagmentQueue</label>
        <queue>ManagmentQueue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>